--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,10 +2,15 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "Node back-end for a simple REST API example with basic CRUD operations.",
-  "main": "index.js",
+  "homepage" : "https://github.com/n-parisi/node-react-rest-api",
+  "main": "./src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "node ./src/app.js"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/n-parisi/node-react-rest-api.git"
   },
   "author": "Nick Parisi",
   "license": "ISC",
