--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
   "author": "Nick Parisi",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.2"
